--- a/osx/.ssh/config
+++ b/osx/.ssh/config
@@ -1,12 +1,14 @@
-# ssh config, goes in ~/.ssh
-
 Host bravo
   HostName bravoweb.ca
   IdentityFile ~/.ssh/seanimacpro
   User root
 
-Host simbot
+Host coincruncher
   HostName 45.79.176.125
   IdentityFile ~/.ssh/seanimacpro
   User root
 	
+Host recycle
+  HostName recyclewithvecova.ca
+  IdentityFile ~/.ssh/seanimacpro
+  User root
