modified tmux config

--- a/general/.tmux.conf
+++ b/general/.tmux.conf
@@ -1,5 +1,7 @@
+### Tmux Config ###
+
 # to reload .conf:
-#   tmux source-file ~/.tmux.conf
+#   $ tmux source-file ~/.tmux.conf
 
 ### SETTINGS ###
 
@@ -8,22 +10,19 @@ set-option -g history-limit 10000
 
 ### BINDINGS ###
 
-bind | split-window -h                                                              # Split active pane horizontally
-bind - split-window -v                                                              # Split active pane vertically
+bind | split-window -h                                                              
+bind - split-window -v                                                              
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
 unbind -T copy-mode-vi MouseDragEnd1Pane
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-    bind -n Pageup if-shell "$is_vim" "send-keys Pageup" "copy-mode -u"
-    bind -n S-Pageup if-shell "$is_vim" "send-keys Pageup" "copy-mode -u"
-    bind -n S-Pagedown send-keys Pagedown                                           # PageUp/PageDown scroll
 
 ### PLUG-INS ###
+# Install tpm plugin manager:
+#   git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 
-# Install locations:
-# https://github.com/tmux-plugins/tpm                                               # plug-in manager
-# https://github.com/tmux-plugins/tmux-resurrect                                    # save/restore sessions after reboot
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-run -b '~/.tmux/plugins/tpm/tpm'                                                    # Init plugin manager ***KEEP ON BOTTOM LINE***
+run '~/.tmux/plugins/tpm/tpm'                   # KEEP ON BOTTOM LINE
+
+
